--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,8 +9,11 @@
     "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.ts"
+    "src/**/*.d.ts"
   ],
+  "angularCompilerOptions": {
+    "enableIvy": false
+  },
   "exclude": [
     "src/test.ts",
     "src/**/*.spec.ts"
